template y url para ingreso

--- a/geoffroea/templates/index.html
+++ b/geoffroea/templates/index.html
@@ -1,8 +1,12 @@
 <html>
 	<head>
-		<title>Ingreso al Control</title>
+		{% block titulo %}
+			<title>Ingreso al Control</title>
+		{% endblock titulo %}
 	</head>
 	<body>
-		<p>{{ formulario }}</p>
+		{% block cuerpo %}
+			<p>{{ formulario }}</p>
+		{% endblock cuerpo %}
 	</body>
 </html>
