--- a/geoffroea/templates/index.html
+++ b/geoffroea/templates/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		{% block cuerpo %}
-			<p>{{ formulario }}</p>
+			<p>Eso por ahora</p>
 		{% endblock cuerpo %}
 	</body>
 </html>
