--- a/geoffroea/templates/ingreso.html
+++ b/geoffroea/templates/ingreso.html
@@ -3,5 +3,5 @@
 	<title>Ingresaste al Control</title>
 {% endblock titulo %}
 {% block cuerpo %}
-	<p>Entraste, por ahora sólo esto encontrarás</p>
+	<p>{{ resultado }}</p>
 {% endblock cuerpo %}
