Usuario identificado en le frontend

--- a/geoffroea/templates/ingreso.html
+++ b/geoffroea/templates/ingreso.html
@@ -3,5 +3,6 @@
 	<title>Ingresaste al Control</title>
 {% endblock titulo %}
 {% block cuerpo %}
-	<p>{{ resultado }}</p>
+	<p>Hola poh {{ nombre }}</p>
+	<p>Tu correo es {{ correo }}</p>
 {% endblock cuerpo %}
