Continuar con frontend y agregado view logout

--- a/geoffroea/templates/ingreso.html
+++ b/geoffroea/templates/ingreso.html
@@ -11,4 +11,5 @@
 		{{ form_perfil.as_p }}
 		<input type="submit" value="Go for it!" />
 	</form>
+	<a href="{% url 'salir' %}">Salir</a>
 {% endblock cuerpo %}
