--- a/geoffroea/templates/index.html
+++ b/geoffroea/templates/index.html
@@ -7,6 +7,9 @@
 	<body>
 		{% block cuerpo %}
 			<p>Ingrese no mas si puede</p>
+			<div class="error">
+			    {{ formulario.username.errors }}
+			</div>
 			<form action="" method="post" id="form">{% csrf_token %}
                 {{ formulario.as_p }}
                 <input type="submit" value="Go for it!" />
