Templates para admin y er

--- a/geoffroea/templates/ingreso.html
+++ b/geoffroea/templates/ingreso.html
@@ -7,4 +7,5 @@
 	<p>Tu trabajas en la {{ region }} región y eres {{ cargo }}</p>
 	{% block gestion %}
 	{% endblock %}
+	<a href="{% url 'salir' %}">Salir</a>
 {% endblock cuerpo %}
