Porfin cambiado el modelo usuario

--- a/geoffroea/templates/gestion/dia.html
+++ b/geoffroea/templates/gestion/dia.html
@@ -1,6 +1,6 @@
 {% extends "ingreso.html" %}
 {% block gestion %}
-<p>Quieres agregar un usuario nuevo?</p>
+<p>Quieres agregar un dia de acción?</p>
 <form action="" method="post">{% csrf_token %}
     {{ form_dia.as_p }}
     <input type="submit" value="Guardar"/>
