Comunas dinámicas, nombre de región y cargo completo y agregado tipo de control

--- a/geoffroea/templates/ingreso.html
+++ b/geoffroea/templates/ingreso.html
@@ -4,7 +4,7 @@
 {% endblock titulo %}
 {% block cuerpo %}
 	<p>Hola poh {{ nombre }}</p>
-	<p>Tu trabajas en la {{ region }} región y eres {{ cargo }}</p>
+	<p>Tu trabajas en la {{ region }} y eres {{ cargo }}</p>
 	{% block gestion %}
 	{% endblock %}
 	<hr />
