--- a/geoffroea/templates/controles/usuario_form.html
+++ b/geoffroea/templates/controles/usuario_form.html
@@ -1,7 +1,7 @@
 {% extends "ingreso.html" %}
 {% block gestion %}
 <p>Nuevo Usuario?</p>
-<form action="/" method="post">{% csrf_token %}
+<form action="{% url 'agregar_insp' %}" method="post">{% csrf_token %}
     {{ form.non_field_errors }}
     {{ form.as_p }}
     <input type="submit" value="Agrega Usuario"/>
