--- a/geoffroea/templates/controles/usuario_modificar_form.html
+++ b/geoffroea/templates/controles/usuario_modificar_form.html
@@ -1,10 +1,10 @@
 {% extends "ingreso.html" %}
 {% block gestion %}
-<p>Nuevo Control?</p>
-<form action="{% url 'agregar_ccff' %}" method="post">{% csrf_token %}
+<p>Nuevo Usuario?</p>
+<form action="{% url 'modificar_insp' object.slug %}" method="post">{% csrf_token %}
     {{ form.non_field_errors }}
     {{ form.as_p }}
-    <input type="submit" value="Agrega CCFF"/>
+    <input type="submit" value="Actualiza Usuario"/>
 </form>
 <a href="{% url 'gestion_registros' %}">Regresar</a>
 {% endblock %}
